формы обратной связи

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             </nav>
               <div class="contact_header">
                   <ul>
-                      <li class="first">+375-29-129-95-14</li>
+                      <li class="first">+375 (29) 129-95-14</li>
                       <li>info@lmedia.by</li>
 
                   </ul>
@@ -89,7 +89,7 @@
   <div class="container">
     <div class="row">
       <div class="grid_12">
-        <h3>О нас</h3>
+
         <img src="images/page2_img.jpg" alt="" class="img_inner fleft">
         <div class="extra_wrapper">
             <h3 class="title_article">Кто мы?</h3>
