--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
             </nav>
               <div class="contact_header">
                   <ul>
-                      <li class="first">+375-29-129-95-14</li>
+                      <li class="first">+375 (29) 129-95-14</li>
                       <li>info@lmedia.by</li>
 
                   </ul>
