--- a/contacts.html
+++ b/contacts.html
@@ -75,7 +75,7 @@
                         </nav>
                         <div class="contact_header">
                             <ul>
-                                <li class="first">+375-29-129-95-14</li>
+                                <li class="first">+375 (29) 129-95-14</li>
                                 <li>info@lmedia.by</li>
 
                             </ul>
@@ -97,7 +97,6 @@
   <div class="container">
     <div class="row">
       <div class="grid_12">
-        <h3>Контакты</h3>
           <div id="link_details"><a  href="#">Скачать наши реквизиты</a></div>
         <div class="map">
           <figure>
@@ -108,15 +107,15 @@
       <div class="grid_5">
         <h3 class="head__1">Адрес:</h3>
         <address class="text3">
-          Республика беларусь<br/> город Минск <br/>пр-д Веснина 12, офис 18
+          Республика Беларусь<br/> город Минск <br/>пр-д Веснина 12, офис 18
         </address>
       </div>
       <div class="grid_4">
         <h3 class="head__1">Телефон:</h3>
         <div class="text3">
             +375 (17) 210-50-71<br/>
-            +375 (44) 593-05-36<br/>
-            +375 (44) 567-17-60
+            +375 (29) 129-95-14<br/>
+            +375 (29) 680-90-30
         </div>
       </div>
       <div class="grid_3">
@@ -226,11 +225,11 @@
             <div class="grid_4">
                 <div class="social_container wow bounceInRight animated">
                     <ul>
-                        <li><a href="#"><img src="images/vk.png"></a></li>
-                        <li><a href="#"><img src="images/facebook.png"></a></li>
-                        <li><a href="#"><img src="images/twitter.png"></a></li>
-                        <li><a href="#"><img src="images/instagram.png"></a></li>
-                        <li><a href="#"><img src="images/linkedin.png"></a></li>
+                        <li><a href="#"><img src="images/vk.png" alt="Lime Media в контакте"/></a></li>
+                        <li><a href="#"><img src="images/facebook.png" alt="Lime Media в facebook" /></a></li>
+                        <li><a href="#"><img src="images/twitter.png" alt="Lime Media в твитере" /></a></li>
+                        <li><a href="#"><img src="images/instagram.png" alt="Lime Media в инстаграмме"/></a></li>
+                        <li><a href="#"><img src="images/linkedin.png" alt="Lime Media на LinkedIn" /></a></li>
                     </ul>
                 </div>
             </div>
