--- a/service_design.html
+++ b/service_design.html
@@ -7,15 +7,19 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css"/>
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" />
     <script src="js/jquery.js"></script>
-    <script src="js/jquery-migrate-1.1.1.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
     <script src="js/jquery.mobilemenu.js"></script>
+    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="js/jquery.mousewheel-3.0.4.pack.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/tmStickUp.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/wow.js"></script>
     <script>
         $(window).load(function(){
             $().UItoTop({ easingType: 'easeOutQuart' });
@@ -69,7 +73,7 @@
                         </nav>
                         <div class="contact_header">
                             <ul>
-                                <li class="first">+375-29-129-95-14</li>
+                                <li class="first">+375 (29) 129-95-14</li>
                                 <li>info@lmedia.by</li>
 
                             </ul>
@@ -158,7 +162,7 @@
                         <p>Веб-дизайн уже давно стал совершенно самостоятельным видом дизайна со своими стандартами и законами. Создание заметного, узнаваемого, привлекательного, и вместе с тем соответствующего всем современных техническим нормам сайта – дело не из простых. Нужно не только соблюдать различные графические пропорции, но также учитывать нюансы отображения на различных платформах. Однако специалисты компании LimeMedia не привыкли останавливаться перед трудностями - мы уже не первый год создаем красивые и функциональные сайты, и с каждым разом количество довольных нашей работой клиентов лишь увеличивается.</p>
                     </div>
 
-                    <div class=" button_services"><a href="#">заказать услугу</a></div>
+                    <div class=" button_services"><a href="#brifdesign" class="fancybox">заказать услугу</a></div>
                 </section>
             </div>
         </div>
@@ -190,6 +194,30 @@
         </div>
     </div>
 </footer>
+<div class="hidden">
+<form id="brifdesign" class="pop_form">
+    <h3>Контактная информация</h3>
+    <input type="text" name="name"  placeholder="Имя контактного лица" required=""/>
+    <input type="email" name="email"  placeholder="Email" required="" />
+    <input type="text" name="phone" placeholder="Телефон" />
+    <input type="text" name="company_name" placeholder="Название компании" />
+    <h3>Дизайн</h3>
+    <label><input type="checkbox" name="logo" value="context" checked/>Логотип</label><br>
+    <label><input type="checkbox" name="style" value="smm"/>Фирменный стиль</label><br>
+    <label><input type="checkbox" name="brandbook" value="seo" />Брендбук(фирменный стиль + реклама, униформа и т.д)</label><br>
+    <input type="text" name="Summ" placeholder="Бюджет" />
+    <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+    <textarea rows="5" cols="50" name="wishes_design" placeholder="Пожелания(цвет, форма и т.д)" required=""></textarea>
+    <textarea rows="5" cols="50" name="info_cunsumer" placeholder="Информация о потребителе(возраст, статус)" required=""></textarea>
+    <textarea rows="5" cols="50" name="info_place" placeholder="место применения продукции" required=""></textarea>
+    <h3>Дополнительная информация</h3>
+    <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
+    <input type="text" name="know" placeholder="Откуда узнали о нас" />
+    <button type="submit" class="btn">Отправить</button><br />
+</form>
+
+
+</div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
 </body>
 </html>
