--- a/service_reclame.html
+++ b/service_reclame.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lime Media</title>
+    <title>Реклама</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico">
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css"/>
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" />
     <script src="js/jquery.js"></script>
-    <script src="js/jquery-migrate-1.1.1.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
     <script src="js/jquery.mobilemenu.js"></script>
+    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="js/jquery.mousewheel-3.0.4.pack.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/tmStickUp.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/wow.js"></script>
     <script>
         $(window).load(function(){
             $().UItoTop({ easingType: 'easeOutQuart' });
@@ -69,7 +73,7 @@
                         </nav>
                         <div class="contact_header">
                             <ul>
-                                <li class="first">+375-29-129-95-14</li>
+                                <li class="first">+375 (29) 129-95-14</li>
                                 <li>info@lmedia.by</li>
 
                             </ul>
@@ -159,7 +163,7 @@
                                 <p>Наружная реклама – не самый экономичный, но определенно один из самых действенных методов заявить о себе. Баннеры, растяжки, бигборды и роллапы – вот лишь некоторые из инструментов, которыми владеет компания LimeMedia для создания эффективной рекламы за пределами Всемирной Сети. Бюджет такой акции может разниться от случая к случаю, ведь наружная реклама - вещь во всех смыслах растяжимая.</p>
                             </div>
                             <div class="grid_3">
-                                <div class=" button_services"><a href="#">заказать услугу</a></div>
+                                <div class=" button_services"><a href="#brifreclame" class="fancybox">заказать услугу</a></div>
                             </div>
                         </div>
                     </div>
@@ -199,6 +203,31 @@
         </div>
     </div>
 </footer>
+<div class="hidden">
+    <form id="brifreclame" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name"  placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email"  placeholder="Email" required="" />
+        <input type="text" name="phone" placeholder="Телефон" />
+        <input type="text" name="company_name" placeholder="Название компании" />
+        <h3>Реклама</h3>
+        <label><input type="checkbox" name="" value="context" checked/>Реклама на TV</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Реклама на радио</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Реклама в СМИ</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Интернет реклама</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Реклама в общественном трансопорте</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Реклама в метро</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Реклама в лифтах</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Наружная реклама</label><br>
+
+        <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+        <textarea rows="5" cols="50" name="about_site" placeholder="Описание услуги" required=""></textarea>
+        <h3>Дополнительная информация</h3>
+        <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
+        <input type="text" name="know" placeholder="Откуда узнали о нас" />
+        <button type="submit" class="btn">Отправить</button><br />
+    </form>
+</div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
 </body>
 </html>
