мелкие поправки после замечаний

--- a/blog.html
+++ b/blog.html
@@ -113,15 +113,15 @@
                 </div>
             </div>
             <div class="grid_4">
-                <div class="social_container wow bounceInRight animated">
-                    <ul>
-                        <li><a href="#"><img src="images/vk.png"></a></li>
-                        <li><a href="#"><img src="images/facebook.png"></a></li>
-                        <li><a href="#"><img src="images/twitter.png"></a></li>
-                        <li><a href="#"><img src="images/instagram.png"></a></li>
-                        <li><a href="#"><img src="images/linkedin.png"></a></li>
-                    </ul>
-                </div>
+                <!--<div class="social_container wow bounceInRight animated">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#"><img src="images/vk.png"></a></li>-->
+                        <!--<li><a href="#"><img src="images/facebook.png"></a></li>-->
+                        <!--<li><a href="#"><img src="images/twitter.png"></a></li>-->
+                        <!--<li><a href="#"><img src="images/instagram.png"></a></li>-->
+                        <!--<li><a href="#"><img src="images/linkedin.png"></a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
