--- a/contacts.html
+++ b/contacts.html
@@ -160,7 +160,7 @@
                            placeholder="Сообщение" id="message" required
                            data-validation-required-message="Введите ваше сообщение" minlength="5"
                            data-validation-minlength-message="минимум 5 символов"
-                           maxlength="999" style="resize:none"></textarea>
+                           maxlength="999" ></textarea>
                   </div>
               </div>
               <div id="success"> </div> <!-- For success/fail messages -->
@@ -223,15 +223,15 @@
                 </div>
             </div>
             <div class="grid_4">
-                <div class="social_container wow bounceInRight animated">
-                    <ul>
-                        <li><a href="#"><img src="images/vk.png" alt="Lime Media в контакте"/></a></li>
-                        <li><a href="#"><img src="images/facebook.png" alt="Lime Media в facebook" /></a></li>
-                        <li><a href="#"><img src="images/twitter.png" alt="Lime Media в твитере" /></a></li>
-                        <li><a href="#"><img src="images/instagram.png" alt="Lime Media в инстаграмме"/></a></li>
-                        <li><a href="#"><img src="images/linkedin.png" alt="Lime Media на LinkedIn" /></a></li>
-                    </ul>
-                </div>
+                <!--<div class="social_container wow bounceInRight animated">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#"><img src="images/vk.png" alt="Lime Media в контакте"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/facebook.png" alt="Lime Media в facebook" /></a></li>-->
+                        <!--<li><a href="#"><img src="images/twitter.png" alt="Lime Media в твитере" /></a></li>-->
+                        <!--<li><a href="#"><img src="images/instagram.png" alt="Lime Media в инстаграмме"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/linkedin.png" alt="Lime Media на LinkedIn" /></a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
