--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
           <ul class="cont_address">
             <li>Республика Беларусь, г. Минск</li>
             <li>+375 (17) 210-50-71</li>
-            <li>+375 (44) 593-05-36</li>
-            <li>+375 (44) 567-17-60</li>
+            <li>+375 (29) 129-95-14</li>
+            <li>+375 (29) 680-90-30</li>
             <li><a href="#">info@lmedia.by</a></li>
 
           </ul>
@@ -238,15 +238,15 @@
                 </div>
             </div>
             <div class="grid_4">
-                <div class="social_container wow bounceInRight animated">
-                    <ul>
-                        <li><a href="#"><img src="images/vk.png"/></a></li>
-                        <li><a href="#"><img src="images/facebook.png"/></a></li>
-                        <li><a href="#"><img src="images/twitter.png"/></a></li>
-                        <li><a href="#"><img src="images/instagram.png"/></a></li>
-                        <li><a href="#"><img src="images/linkedin.png"/></a></li>
-                    </ul>
-                </div>
+                <!--<div class="social_container wow bounceInRight animated">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#"><img src="images/vk.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/facebook.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/twitter.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/instagram.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/linkedin.png"/></a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
