--- a/service_design.html
+++ b/service_design.html
@@ -204,7 +204,7 @@
     <h3>Дизайн</h3>
     <label><input type="checkbox" name="logo" value="context" checked/>Логотип</label><br>
     <label><input type="checkbox" name="style" value="smm"/>Фирменный стиль</label><br>
-    <label><input type="checkbox" name="brandbook" value="seo" />Брендбук(фирменный стиль + реклама, униформа и т.д)</label><br>
+    <label><input type="checkbox" name="brandbook" value="seo" />Брендбук(фирменный стиль + реклама и т.д)</label><br>
     <input type="text" name="Summ" placeholder="Бюджет" />
     <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
     <textarea rows="5" cols="50" name="wishes_design" placeholder="Пожелания(цвет, форма и т.д)" required=""></textarea>
