--- a/service_support.html
+++ b/service_support.html
@@ -446,15 +446,15 @@
                 </div>
             </div>
             <div class="grid_4">
-                <div class="social_container wow bounceInRight animated">
-                    <ul>
-                        <li><a href="#"><img src="images/vk.png"/></a></li>
-                        <li><a href="#"><img src="images/facebook.png"/></a></li>
-                        <li><a href="#"><img src="images/twitter.png"/></a></li>
-                        <li><a href="#"><img src="images/instagram.png"/></a></li>
-                        <li><a href="#"><img src="images/linkedin.png"/></a></li>
-                    </ul>
-                </div>
+                <!--<div class="social_container wow bounceInRight animated">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#"><img src="images/vk.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/facebook.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/twitter.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/instagram.png"/></a></li>-->
+                        <!--<li><a href="#"><img src="images/linkedin.png"/></a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
@@ -467,8 +467,10 @@
         <input type="text" name="phone" placeholder="Телефон" />
         <input type="text" name="company_name" placeholder="Название компании" />
         <h3>Описание</h3>
+        <input type="text" name="site_name" placeholder="Название вашего сайта" />
+
         <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
-        <textarea rows="5" cols="50" name="about_site" placeholder="Описание услуги" required=""></textarea>
+        <textarea rows="5" cols="50" name="about_support" placeholder="Описание услуги" required=""></textarea>
         <h3>Дополнительная информация</h3>
         <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
         <input type="text" name="know" placeholder="Откуда узнали о нас" />
